--- a/quiz.html
+++ b/quiz.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -7,14 +6,16 @@
   </head>
   <body>
     <nav>
-      <ul>
-        <li><a href="/quiz.html" target="_blank">Home</a></li>
-        <li><a href="/blog.html" target="_blank">Blog</a></li>
-        <li><a href="/services.html" target="_blank">Services</a></li>
-        <li><a href="/testimonies.html" target="_blank">Testimonies</a></li>
-        <li><a href="/meet_our_team.html" target="_blank">Meet our team</a></li>
-        <li><a href="/contact_us.html" target="_blank">Contact us</a></li>
+      <p><ul>
+        <li><a href="quiz.html" target="_blank">Home</a></li>
+        <li><a href="blog.html" target="_blank">Blog</a></li>
+        <li><a href="services.html" target="_blank">Services</a></li>
+        <li><a href="testimonies.html" target="_blank">Testimonies</a></li>
+        <li><a href="meet_our_team.html" target="_blank">Meet our team</a></li>
+        <li><a href="contact_us.html" target="_blank">Contact us</a></li>
       </ul>
+
     </nav>
+    
   </body>
 </html>
