changed top posts to my top posts

--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
     <p>Duis quis malesuada nisi, sed fringilla dui. Etiam a mattis nisl. Aenean dapibus consequat dolor consectetur ullamcorper. Phasellus scelerisque quam et ex ullamcorper, euismod convallis dui hendrerit. Praesent vehicula sit amet augue non elementum. Curabitur mattis leo in turpis porttitor scelerisque. Duis ac pharetra ante. </p>
 <div style="float: right;">
     <ul id="top-posts">
-      <h3>Top Posts</h3>
+      <h3>My Top Posts</h3>
       <li><a href="#" target="_blank">Random Blog Post</a></li>
 
       <li><a href="#" target="_blank">One of the Tops Blog Post</a></li>
